force-app/main/default/objects/WorkOrderLineItem/fields/Doorpack_ItemType__c.field-meta.xml
<CustomField>
    <fullName>Doorpack_ItemType__c</fullName>
    <label>Doorpack ItemType</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OtherCharge</fullName>
            </value>
            <value>
                <fullName>ServiceItem</fullName>
            </value>
            <value>
                <fullName>NonInventoryItem</fullName>
            </value>
            <value>
                <fullName>InventoryItem</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>