force-app/main/default/objects/WorkOrderLineItem/fields/Doorpack_PO_Num__c.field-meta.xml
<CustomField>
    <fullName>Doorpack_PO_Num__c</fullName>
    <label>Doorpack PO Num</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>