force-app/main/default/objects/WorkOrderLineItem/fields/Doorpack_Qty__c.field-meta.xml
<CustomField>
    <fullName>Doorpack_Qty__c</fullName>
    <label>Doorpack Qty</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>