force-app/main/default/objects/WorkOrderLineItem/fields/Doorpack_QtyUsed__c.field-meta.xml
<CustomField>
    <fullName>Doorpack_QtyUsed__c</fullName>
    <label>Doorpack QtyUsed</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>