force-app/main/default/objects/WorkOrderLineItem/fields/Doorpack_Quote_Num__c.field-meta.xml
<CustomField>
    <fullName>Doorpack_Quote_Num__c</fullName>
    <label>Doorpack Quote Num</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>