force-app/main/default/objects/WorkOrderLineItem/fields/Doorpack_ST_Tax_Name__c.field-meta.xml
<CustomField>
    <fullName>Doorpack_ST_Tax_Name__c</fullName>
    <label>Doorpack ST Tax Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non</fullName>
            </value>
            <value>
                <fullName>Tax</fullName>
            </value>
            <value>
                <fullName>Exp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>