force-app/main/default/objects/WorkOrderLineItem/fields/Doorpack_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Doorpack_Unit_Price__c</fullName>
    <label>Doorpack Unit Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>