force-app/main/default/objects/WorkOrderLineItem/fields/Doorpack_WorkOrdNO__c.field-meta.xml
<CustomField>
    <fullName>Doorpack_WorkOrdNO__c</fullName>
    <label>Doorpack WorkOrdNO</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>