force-app/main/default/objects/WorkOrderLineItem/fields/Total_Line_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Line_Cost__c</fullName>
    <formula>Unit_Cost__c *  Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Line Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>